--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.relevantcodes</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>LATEST</version>
         </dependency>
@@ -72,12 +84,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
-
-
-
-
-
-
 
     </dependencies>
 
